--- a/pages/en/faq.mdx
+++ b/pages/en/faq.mdx
@@ -1,100 +1,139 @@
 import { MacOS, Windows } from '@/../components/platform'
 
 # Frequently Asked Questions
-Here are answers to some common questions concerning RIM. When faced with an issue, please refer to this document whenever possible. If your question is not covered in this document, please [Contact us.](https://pneumasolutions.com/contact/)
-## Compatibility
-### What Windows versions are supported?
-We support Windows7SP1 and above, as well as Windows Server2012 and up.
-### What Mac OS versions(s) are supported?
-RIM supports Mac OS Ventura along with future versions, be they Intel or Apple Silicon. You as a Mac user can provide support to Windows targets, and Windows users can provide support to your Mac.
-### What about Mac OS versions before Ventura?
-Some features of RIM depend on functionality newly introduced in Ventura, making compatibility with previous versions difficult to implement.
-## Installation
-### Why so many permissions requests on Mac OS?
-This is unfortunately beyond our control, as Mac OS requires that we use their avenues for requesting the necessary permissions needed for RIM. We have no control over the UX, so can only go as far as providing as much instruction as we can.
-## Connection Information
-### Generally speaking, how responsive is RIM?
-The roundtrip latency during an RIM session is extremely minimal. Because we don't rely on a central service, most of the time your connections are direct from one computer to another - this is what is known as peer-to-peer. If your network configuration doesn't allow for peer-to-peer connections, we fall back to any number of relays located around the world rather than relying on one central server. Thus, even then your latency will still be farely minimal.
-### Where are your relays located?
-Currently, we offer relays in the following locations:
-* U.S.
-    * Virginia
-    * California
-* Teronto, Canada
-* London, England
-* Warsaw, Poland
-* Bangalore, India
-* Singapore
-* Sidney, Australia
-* Sao Paulo, Brazil
 
-## General Session Troubleshooting
-### The target machine to which I am connected doesn't respond properly to keyboard commands that work fine on my keyboard. What's going on?
-This could be due to a conflict in keyboard layouts. On rare occasions, if a keyboard layout is different enough from your own it may confuse RIM. Should that occur, please contact us with a report containing information about the keyboard layout of both machines.
-### After a computer is reimaged and has been reconfigured with the same computer name, is there anything that needs to be done to get RIM up and running again? 
-Simply remove the machine from your account, reinstall RIM, then add the machine back into your account.
+Here are answers to some common questions concerning RIM. When faced with an issue, please refer to this document whenever possible.  
+Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
 
-## Pricing and Payments
-### So, getting help from a person over RIM is totally free, right?
-You bet! The subscriptions and/or one-off payments are for individuals and organizations seeking to offer remote assistance. No need to worry about getting a subscription if you're the person receiving help. In fact, you do not even have to set up an account if you are merely receiving help.
-### I don't really do remote assistance regularly, but I may be helping a friend or family member on occasion. Are there any options that don't involve a subscription?
-Certainly! We do accommodate as many use cases as we can.
-* Anyone can assist a user over RIM for free for up to 30 minutes a day. So if you need to help someone install some software, fix a problem real quick, or send over a few files, we've got you covered. These minutes don't have to be used in one sitting.
-* There are, of course, going to be situations where a particular issue requires a little more time. Or maybe you're assisting someone learning a new piece of software and might be connecting on and off over the next few days. That's where our day passes and incident passes come in.
-    * Incident passes allow you to connect to a single target as many times as is needed over a 24 hour period.
-    * Day passes allow you to connect to multiple targets over a 24 hour period.
-    * Packages of prepaid hours allow you to have a set number of hours available to be used entirely on your own time.
-* You can accumulate several of these passes and hourly packages and use them whenever the time calls for them. If you have multiple day passes, for instance, you do not need to use them consecutively. Similarly, You don't need to use your prepaid hours in one session or 24 hour period.
+## What is Scribe for Meetings?
 
-### I purchased a package of prepaid hours. What happens to my free daily allotment?
-Good news: Your free 30 minute daily allotment is not going anywhere! When you start a keyword-based session, RIM will start off by using your free 30 minute daily allotment. Your prepaid time will be used after your free 30 minutes is up.
-### How long will my prepaid hours last? Are they tied in with my subscription?
-Prepaid hours are entirely separate from your subscription. That being said, your prepaid hours will remain in your account for one (1) year past the date they were first used.
-### How do I go about bringing RIM to the attention of my place of work?
-We've assembled a [Self-Advocacy Kit](https://sak.getrim.app) (SAK). A packet of e-mail formatted letters you can send to appropriate individuals on behalf of yourself or an employee. For the record, RIM provides the same functionality as less accessible mainstream solutions. As such, RIM can replace an existing infrastructure, rather than be used alongside one. It is therefore considered a reasonable accessibility accommodation and should be provided to you by your organization. Accessibility isn't a favor, it's a right to inclusivity.
-### What payment methods do you accept?
-We process payments through Stripe, so we are able to directly accept Visa, Mastercard, Amex, or Discover. Additionally, Stripe can accept payments via Google Pay.
-### How do these passes work? Does the clock start immediately upon payment, or on the day I initiate the session?
-Passes only begin when the controller initiates the session. So if the target's machine fails on them requiring a trip to the shop and a same-day turnaround is not possible, you can simply hold off until the machine is back in good shape and your day pass will still be waiting for you.
-### So this means these passes don't expire?
-No. Rest assured that your accumulation of day passes will be waiting patiently for you to activate them whenever you're ready.
-### What happens if I connect to another machine on the day an incident pass has been used?
-That depends. If the machine is within your subscription, I.E. if you're accessing your home machine while on the road, then it's business as usual. Any other connections that aren't the initial target you connected to will work under the usual 30 minute allotment.
-### I hold an active personal subscription. Would I still be able to assist a user outside the group of targets for up to 30 minutes, or via a pass?
-Yes! Your 30 minute daily allotment is still present for any machine outside of your subscription. Additionally, acquiring a subscription does not replace any existing passes you may have.
-### I have a personal subscription, and the target computer underwent a hardware upgrade. Will Rim count this as a machine switch?
-Only if RIM needs to be reinstalled. So, while a hard drive upgrade or any other situation requiring a Windows reinstallation would be considered a machine switch, upgrading the ram would not.
-### Our company bought the pro subscription, but we have two techs - one that does help-desk during the day, and a system maintenance tech that works in the evening. Would we be able to assign the evening sysadmin a controller seat?
-Definitely. In situations where multiple technitions will be using RIM, we offer up to two (2) additional controller seats for $50 a month per seat - $500 a year per seat - to accompany the pro plan if needed. This will make it easier for multiple controllers at different workstations or offices to provide remote support.  
-If you have multiple controller seats, you can purchase additional channels for them so that sessions can run simultaneously. Each additional channel is $50 a month, or $500 a year. 
+Scribe for Meetings is a cloud-based technology that takes a shared presentation on platforms like Zoom, Microsoft Teams, Google Meet, and others and renders it into an accessible presentation in real time for print-impaired individuals.
 
-## Security
-### Are RIM sessions encrypted?
-Yes. All sessions across all platforms, be they direct peer-to-peer connections or connections using a relay, are encrypted end to end using Datagram Transport Layer Security (DTLS). This is the same technology seen in the HTTPS protocol that modern websites implement for security.
-### Can Pneuma Solutions eavesdrop on sessions relayed by the public cloud?
-No. Session key negotiation and encryption are performed end to end between the controller and the target. In other words, everything is encrypted before it even leaves your device. That way, the cloud service merely relays the data as is, making it impossible for the service to decipher the data.
-### What measures have been taken to prevent remote code execution (RCE) vulnerabilities?
-All RIM code which is exposed to input from the network is written in [memory-safe programming languages](https://www.memorysafety.org/docs/memory-safety/) including Rust and JavaScript.
-### Is RIM HIPAA-compliant?
-Yes. The best configuration in this case would be an on-premises deployment, so please [get in touch with us](https://pneumasolutions.com/contact/) if your use case depends on this.
-### Do any ports need to be opened on the target or controller?
-No and no.
-### What connections would need to be allowed on a network in order for RIM to function?
-When utilizing the public cloud, an https connection to [getrim.app](https://getrim.app) is required. In optimal cases this is enough for RIM to establish a peer-to-peer connection between the controller and the target. However, it helps to allow UDP connections through ports 19302 and 3478 (the standard STUN and TURN ports). This ensures that if a relay is being utilized, RIM will not have to fall back to a tcp connection on port 443.
-### Does RIM run in the background, and if so will it appear in my Command+Tab list?
-RIM runs in the background in order to process automatic updates, receive unattended/prompted connection requests, and enable use of the global Option+Shift+Backspace keyboard command. It will not phone home for any other purpose, and no personally identifiable information is transferred.  
-RIM will not appear in your Command+Tab list, but it will appear in the status menus that contain your battery, WiFi connection information, etc.
-## Remote Accessibility Module
-### Is there anything the target machine needs to configure for first-time use of the Remote Accessibility Module?
-Not at all! There are no dialogue boxes, permission request screens or anything of the sort.
-### Does the Remote Accessibility Module work on secure screens such as the lock screen?
-Yes! Since the RIM host runs with elevated privileges, this allows us to leverage the Remote Accessibility Module for secure screens. The only exception to this is FileVault's logon window.
-## Unattended Sessions
-### Are voice conversations supported during unattended sessions?
-No. However, prompted sessions do support voice conversations.
-### If I delete an unattended machine from my controller account, will it automatically revoke permission on the target?
-Yes. Once an unattended target is removed, the change will be effective immediately. If the target machine is powered down or otherwise not connected to the internet, the change will be effective as soon as an internet connection is established on their machine.
-### The target machine rebooted after installing updates and drivers, and it requires a password to log in. How does the session continue from here?
-In most instances, particularly when FileVault disk encryption is enabled, the target user will need to manually enter the password. RIM cannot start on an encrypted Mac before it has been fully logged in.
-### I have multiple machines playing the part of the controller. Will the list of machines set up for unattended access populate across all machines?
-Yes. The list of machines configured for unattended access is stored within your account, so it will populate automatically.
+## Who benefits from Scribe for Meetings?
+
+First and most importantly, the millions of print-impaired persons who would otherwise not benefit from the information being presented; and, the masses of businesses large and small, government agencies, all levels of education,, and organizations who know little about accessibility but would like an affordable means of making their content more inclusive.
+
+## Why should I choose Scribe for Meetings over other products?
+
+We’re confident there is nothing else out there that does what we do quite the way we do it. Scribe for Meetings is the first technology of its kind to synchronize with meeting platforms in real time. Sure, competitors will take note and likely roll out their imitations, and we look forward to the competition ,but unless they plan on competing on price, we feel confident you will find what you need right here.
+
+## How does Scribe for Meetings work?
+
+If you are the host:
+1. Visit [ScribeForMeetings.com,](https://scribeformeetings.com) paste the invite link for your meeting, and press “Go”.
+1. Click the button to register your meeting.
+1. If prompted, enter your email address to log in. If you’re using Scribe for Meetings on behalf of an organization, make sure to use your email address provided by that organization. If your organization has integrated Scribe for Meetings with a single sign-on (SSO) system, then you’ll be taken to the normal login process for your organization, or possibly logged in automatically. Otherwise, we’ll send you an email with a link that you can use to log into Scribe for Meetings.
+1. Enter a name for your meeting, select your PowerPoint slide deck, and press “Submit”.
+    NOTE: Scribe for Meetings currently supports Zoom meetings, Zoom webinars and Microsoft Teams. Sign up to our email list to receive a notification when we add features and additional meeting platforms.
+<!-- end -->
+Your content will be ready to launch within minutes. No knowledge of creating accessible presentations is required. As the host, you don’t need to run extra software on your device, and content can be uploaded as little as 5 minutes before the meeting.
+For the print-impaired meeting attendee, navigate to https://www.ScribeForMeetings.com, paste in your Zoom or Microsoft Teams invite link, and press “Go”. Alternatively, your meeting host might have given you a direct link to Scribe for Meetings, either in the invitation email or in the meeting itself via chat. Whichever way you get there, you’re now ready to follow along with the presentation in any web browser on any platform.
+
+## How difficult is it to install Scribe for Meetings?
+
+Scribe for Meetings is not an installed application. It is a cloud service, so nothing more than a browser is needed to enjoy a meeting. For presenters, Other than uploading their content in advance of the meeting, the process was intentionally designed to be simple. There is nothing to install to your computer or device other than Zoom, Microsoft Teams or similar meeting platforms.
+Enterprise customers can host Scribe for Meetings on their own servers. Please get in touch with us for details.
+
+## I see an attendee named “Scribe for Meetings” trying to join my meeting. What’s going on?
+
+That’s the Scribe bot. This bot watches the screen in your meeting, so it can see what slide is currently being displayed and provide the accessible version of that slide in real time to print-impaired attendees. The Scribe bot will not disrupt your meeting in any way, and it will not collect any information other than what content is currently being displayed through screen sharing. If your meeting has a waiting room, please promptly admit the Scribe bot into the meeting. Otherwise, Scribe for Meetings will not work.
+
+## I’m a print-impaired meeting attendee, and I don’t know if the meeting I’m attending has been registered through Scribe for Meetings. What can I do?
+
+Go to [ScribeForMeetings.com](https://scribeformeetings.com), paste in the Zoom or Microsoft Teams invite link for your meeting, and press “Go”. If the meeting has been registered with Scribe for Meetings, then you’re ready to follow along with accessible slides. If not, you can sign up to be notified by email when the meeting has been registered with Scribe for Meetings.
+
+## I frequently attend Zoom or Microsoft Teams meetings. What’s the easiest way for me to find out if a meeting is registered with Scribe for Meetings, and if it is, view the accessible content?
+
+Scribe for Meetings has an [extension for Chrome and Edge](https://chrome.google.com/webstore/detail/scribe-for-meetings/bikolphfhfiambndbiimigilhfekcfpn) that checks the availability on Scribe for Meetings of any Zoom or Microsoft Teams meeting you attend. With a single hotkey, you can view the accessible content if the meeting is registered, or request a follow-up notification if the meeting is registered with Scribe for Meetings later.
+
+## I’m a print-impaired meeting attendee. Do you have any resources to help me ask the meeting host to use Scribe for Meetings?
+
+Yes; check out our [Scribe for Meetings Self-Advocacy Kit](https://sak.scribeformeetings.com). Here you’ll find a variety of pre-written letters that you can personalize, then copy and paste into an email.
+
+## Can Scribe for Meetings convert a presentation to accessible file formats for offline viewing?
+
+Yes. When creating the meeting, the presenter can optionally choose to provide their presentation for downloading in the following file formats:
+* An accessible web page, with all of the same features as the live presentation, including read aloud
+* Tagged PDF
+* MP3, via text-to-speech in about a dozen languages
+* DAISY, text plus audio
+* EPUB
+* Microsoft Word
+* Braille: Grade 1, Grade 2, Unified English Braille, and many other languages
+
+The PDF and Microsoft Word options support large print. This option, and other options such as speaking rate for audio output, can be chosen by attendees when they download the slides.
+This feature is not enabled by default; the presenter must choose to allow it. To enable this feature when registering a meeting, check the checkbox called “Allow attendees to download accessible versions of slides.” This choice will only take effect for the meeting currently being registered.
+For a meeting where this feature is enabled, as soon as the presenter has shown a slide, the web page where attendees view accessible slides will include a link called “Download Slides”. To download the slides, an attendee should follow these steps:
+1. Click the “Download Slides” link.
+1. If prompted, enter your email address and follow the instructions to log in.
+1. Choose the accessible format you want.
+1. For some formats, you can optionally customize settings, such as text-to-speech voice, speaking rate, braille translation table, or large print.
+1. Click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+
+## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
+
+Yes. Follow these steps:
+1. 
+Go to ScribeForMeetings.com.
+1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
+1. Click “Settings”, then “Meeting Defaults”.
+1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
+
+## I want to protect my slides from unauthorized copying and distribution. Does Scribe for Meetings support this?
+
+Unfortunately, Scribe for Meetings cannot stop your attendees from copying the text of your slides. However, if you don’t allow the slides to be downloaded, it won’t be easy for attendees to copy your slides, because they will have to copy one slide at a time. Also, note that in practice, this is no different from what any attendee can already do by taking screenshots of your slides.
+
+## Is Scribe for Meetings multilingual?
+
+Yes. Scribe for Meetings can render content in any of 140 languages, again with no extra effort from the presenter.
+
+## Do I need to slow down my presentation to make sure that print-impaired attendees can keep up?
+
+No. Scribe for Meetings has a feature called Dynamic Visual Representation, or DVR mode for short, that allows print-impaired attendees to read your accessible slides at their own pace. An attendee can pause the live presentation, go back to a slide they’ve already read, move forward at their own pace, and then continue with the live presentation when they’re ready.
+To use DVR mode, the attendee should press either the Suspend Presentation button or the Previous Slide button. These buttons are labeled as such for screen reader users, and for mouse users who hover over them. Visually, they’re at the bottom of the page and look like the Pause and Previous Track buttons in a media player. When the user presses one of these buttons, the live presentation will pause, and for the Previous Slide button, it will return to the previous slide. The user can then use the Previous Slide and Next Slide buttons to go through the slides at their own pace, and the Go Live button to return to the live presentation. These buttons look like the Previous Track, Next Track, and Play buttons in a media player.  
+Note that DVR mode only allows attendees to review slides that have been shown since they joined the presentation. If a print-impaired attendee is late for your presentation, then they missed the same slides that any other late attendee would have missed.
+
+## I have a print-impaired attendee who would benefit from having my content spoken aloud but isn’t comfortable with a full screen reader. Can Scribe for Meetings help?
+
+Yes. Our Read Aloud feature will speak your slides using the voices provided by your user’s device and web browser, while drawing a box around each word as it is spoken to help the user follow along visually. For Windows users, we highly recommend the Microsoft Edge browser for this feature, because Edge offers outstanding voices in several languages, free of charge. However, this feature also works with all other major platforms and browsers, including mobile devices.  
+To start reading the current slide aloud, press the Read Aloud button, which is at the bottom of the screen and looks like a speaker. While Scribe for Meetings is reading the slide aloud, it will show controls to stop reading (the button with a square icon), pause or resume, go back or forward (the buttons that look like Previous Track and Next Track buttons in a media player), speed up and slow down reading, or change the voice. These controls will go away as soon as reading is finished or as soon as the user stops it.  
+Note that Read Aloud and DVR mode (see above) can be used together, to allow print-impaired attendees to read slides both in their own way and at their own pace.
+
+## I have a print-impaired attendee who needs my slides in a large font but doesn’t need a full-screen magnification program. Can Scribe for Meetings help?
+
+Yes. Scribe for Meetings displays your slides in a way that makes them accessible for attendees with all types of content requirements. If large fonts are needed, an attendee can use their browser’s page zoom feature to adjust the font size of the slides, without requiring the user to continually scroll back and forth. Scribe for Meetings will also automatically display the text in the user’s preferred color scheme, whether it’s the usual dark-on-light, light-on-dark (also known as dark mode), or a custom scheme.  
+
+## Wait! What’s going on here? Why do my slides look so different in Scribe for Meetings than they do in my presentation?
+
+Every aspect of how Scribe for Meetings displays your slides is optimized for accessibility, for attendees with all types of print impairments. Since Scribe for Meetings is meant to be used alongside your existing meeting platform, attendees are always free to flip back to the main meeting window to see the slides as they’re displayed in your presentation without accessibility.
+
+## I don’t use PowerPoint. Can I still make my presentation accessible with Scribe for Meetings?
+
+Scribe for Meetings can make your screen-shared slides accessible no matter what app you use to present them, as long as you can provide your slide deck in PowerPoint format. Other presentation apps such as Keynote and Google Slides can convert their slide decks to PowerPoint format, so you can use these with Scribe for Meetings.
+
+## Scribe for Meetings isn’t showing the accessible versions of my slides during the presentation, or it’s skipping some slides. What’s wrong?
+
+Make sure that you’re presenting your slides in a full-screen slide show, and that you’ve set up Zoom or Microsoft Teams screen sharing to share that slide show with your audience. If you’re using PowerPoint for Windows to run your presentation, then once you’ve opened PowerPoint, make sure you press F5 to enter slide show mode.
+[Learn more about how to use Zoom screen sharing with PowerPoint.](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation)
+[Learn how to use Microsoft Teams screen sharing with PowerPoint.](https://support.microsoft.com/en-us/office/share-powerpoint-slides-in-a-teams-meeting-fc5a5394-2159-419c-bc59-1f64c1f4e470)
+
+## How does Scribe for Meetings handle pictures and graphics in my slides?
+
+If you already wrote descriptions (also known as alt tags or captions) for the graphical content in your slides, Scribe for Meetings will use those. Otherwise, Scribe for Meetings will use a cloud-based image description service powered by machine learning to automatically add alt tags for your graphics. If those pictures contain text, Scribe for Meetings will also use optical character recognition (OCR) to make that text accessible.
+
+## My slides have charts, diagrams, or other complex graphics. Can Scribe for Meetings handle them?
+
+The short answer is, not for the most part. We’re still working on this. Because the Scribe Augmented Document Remediation platform is powered by machine learning, as we receive more documents and slide decks with complex graphics, we’ll be able to train our model to make those graphics accessible. But, for now, you’ll just have to try it and see.
+
+## Does Scribe for Meetings work with meeting platforms other than Zoom and Microsoft Teams, like Jitsi Meet, Google Meet, Slack, Amazon Chime, or BlueJeans?
+
+Not yet, but it will soon.
+
+## How do people within our organization log into Scribe for Meetings?
+
+Scribe for Meetings currently supports two options for authentication. The simplest option is our email-based login process. Just enter your email address, and we’ll send a link that you can use to log in; no password is needed. For organizations with more stringent security requirements, we can also integrate with single sign-on (SSO) systems that implement the SAML standard, either via the [InCommon](https://www.incommon.org/) federation or using bilateral metadata exchange. Our SAML service provider uses the open-source Shibboleth SP package and was implemented in partnership with [Signet, Inc.,](https://www.signet.id/) an identity management and access control firm founded by an architect of Shibboleth. Note that we support SSO through a variety of identity providers; in addition to Shibboleth IdP, we’ve tested with Azure Active Directory. When your organization signs up with Scribe for Meetings, we’ll offer SSO onboarding, covered by the setup fee.
+
+## What is the future of Scribe for Meetings?
+
+Scribe, the platform behind our Scribe line of products, is actively learning every time a document is processed. The machine learning powered Augmented Document Remediation technology gets smarter with each page, moving us that much closer to 100% accuracy. The benefits spill over into all our products, making Scribe for Meetings an application that will only get better the more you use it.
