--- a/pages/en/workingwithsessions.mdx
+++ b/pages/en/workingwithsessions.mdx
@@ -1,228 +1,34 @@
 import { MacOS, Windows } from '@/components/platform'
 
-# Working within a Session
+# Setting up a Meeting
 
-## Things to Know before you Begin
+Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
 
-A few things will happen immediately after the connection is established.
-<Windows>
-- The remote control window for the session will appear.
-- You will be informed about the status of the running screen reader, or lack thereof, on the client's machine.
-- If the client is running a screen reader, a toast notification informing the user that the remote session has begun will provide instant confirmation that the user's system audio is working.
-- A Mac target will pop up the keyboard setup assistant if this is the first time a controller has connected to it.
-    - This is for the Karabiner virtual keyboard, which listens to keyboard commands sent to it by a controller.
-    - As such, you will want to walk the target computer through the setup assistant, because it will be listening for remote keyboard presses in the identification process, not the Mac's own keyboard.
-- Last but not least, all keyboard and mouse input will immediately be directed to the target computer. To direct control back to your machine, do either of the following:
-    - Press Windows+Shift+Backspace.
-    - Right-click the RIM window's title bar.
-    - Left-click the RIM icon.
-</Windows>
-<MacOS>
-- The remote control window for the session will appear.
-- You will be informed about the status of the running screen reader, or lack thereof, on the client's machine.
-- If the client is running a screen reader, a toast notification informing the user that the remote session has begun will provide instant confirmation that the user's system audio is working.
-- A Mac target will pop up the keyboard setup assistant if this is the first time a controller has connected to it.
-    - This is for the Karabiner virtual keyboard, which listens to keyboard commands sent to it by a controller.
-    - As such, you will want to walk the target computer through the setup assistant, because it will be listening for remote keyboard presses in the identification process, not the Mac's own keyboard.
-- Last but not least, all keyboard and mouse input will immediately be directed to the target computer. To direct control back to your machine, do either of the following:
-    - Press Option+Shift+Backspace.
-    - Click on the large RIM icon in the upper left-hand corner of the session window.
-</MacOS>
+## If you are the Organizer
 
-## Remote Control Zone
+1. Login to your Scribe for Meetings account, if you have not done so already.
+1. Enter the invite link for the meeting, then click "Go."
+1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
+1. Enter a meeting title in the "Title" edit box.
+	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
+1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
+	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
+1. These next settings are optional. You may skip past them and click "Done" if desired.
+	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
+	1. You will be asked if you wish to have images automatically described.
+		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
+	1. Lastly, you will be asked if you wish to allow the downloading of slides. Once you are done 
+1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
+1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
+1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
+1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
 
-At this point, you're all set to perform whatever tasks need doing on the client side. Should you need to switch back to controlling your own machine, bring up the RIM menu, then select the "Minimize session" option. You will be taken back to your machine until you switch back into the session window or press Windows+Shift+Backspace again. When you go back into the session window, keyboard and mouse input will once again be directed to the client computer.
+## If you are not the organizer:
 
-Once you're done, either the controller or the target can go into the RIM menu and choose the "Disconnect Session" option. When the session ends, the target machine will get a toast notification informing them of this.
-
-## The RIM Menu
-
-As mentioned earlier, accessing the RIM menu directs you back to your machine. There are a number of options in this menu. They include:  
-<Windows>
-- Update RIM on Target: Forces an update of RIM on the target computer
-    - This option shows if the target's machine is running an older version of RIM.
-- Minimize Session (**Windows+Shift+M**): brings control back to your machine as described above
-- Transfer File to Target: Appears if a file is on the clipboard.
-    - Although this alternate method of completing a file transfer is always available, it is only necessary for transferring files to Mac targets.
-- Flip Session (**Windows+Shift+F**): Allows your client to remote control your machine and hear its audio. As the original controller, you can flip the session back by selecting this option a second time.
-- Start/stop Voice Conversation: Allows you to toggle the voice chat on or off for your session.
-    - Note that this option is unavailable in unattended sessions as they do not support voice chat. However, prompted sessions still support this.
-- Start Remote Accessibility: This option appears when no screen reader is running on the remote computer. This will enable speech on your end, but the client will not need to worry about hearing speech.
-    - If a screen reader (including Remote Accessibility) is running, this option turns into a force quit for the running screen reader. This is useful when a target's screen reader stops responding to the extent you are unable to restart it normally.
-- Reboot and Reconnect: Allows you to reboot the computer and automatically reconnect the session.
-    - Note that a Mac target cannot start RIM pre-login due to platform limitations, notably FileVault.
-    - As such, RIM will reconnect once the user logs in.
-- Send Control+Alt+Delete: Sends this keystroke to the remote machine.
-    - An equivalent for this option is not yet implemented for Mac targets.
-- Request Unattended or Prompted Access: Allows you to send a request for unattended access to the client computer. This is useful if you are a sysadmin and need to perform routine maintenance, or even for something as simple as controlling your home machine while on the go.
-- Lock the Target Machine: Locks the target machine.
-- View Connection Details: Provides a detailed lowdown on your connection, as well as the target machine. Information includes:
-    - Connection statistics
-    - Information about the computer, including operating system version, available RAM, etc.
-    - Running processes (Windows targets)
-    - Installed packages (Windows targets)
-- Disconnect Session (**Windows+Shift+D**): Terminates the session.
-    - Remember that this option is available to both sides of the session.
-</Windows>
-<MacOS>
-- Update RIM on Target: Forces an update of RIM on the target computer
-    - This option shows if the target's machine is running an older version of RIM.
-- Minimize Session (**Option+Shift+M**): brings control back to your machine as described above
-- Transfer File to Target: Appears if a file is on the clipboard.
-    - Although this alternate method of completing a file transfer is always available, it is only necessary for transferring files to Mac targets.
-- Flip Session (**Option+Shift+F**): Allows your client to remote control your machine and hear its audio. As the original controller, you can flip the session back by selecting this option a second time.
-- Start/stop Voice Conversation: Allows you to toggle the voice chat on or off for your session.
-    - Note that this option is unavailable in unattended sessions as they do not support voice chat. However, prompted sessions still support this.
-- Start Remote Accessibility: This option appears when no screen reader is running on the remote computer. This will enable speech on your end, but the client will not need to worry about hearing speech.
-    - If a screen reader (including Remote Accessibility) is running, this option turns into a force quit for the running screen reader. This is useful when a target's screen reader stops responding to the extent you are unable to restart it normally.
-- Reboot and Reconnect: Allows you to reboot the computer and automatically reconnect the session.
-    - Note that a Mac target cannot start RIM pre-login due to platform limitations, notably FileVault.
-    - As such, RIM will reconnect once the user logs in.
-- Send Control+Alt+Delete: Sends this keystroke to the remote machine.
-    - An equivalent for this option is not yet implemented for Mac targets.
-- Request Unattended or Prompted Access: Allows you to send a request for unattended access to the client computer. This is useful if you are a sysadmin and need to perform routine maintenance, or even for something as simple as controlling your home machine while on the go.
-- Lock the Target Machine: Locks the target machine.
-- View Connection Details: Provides a detailed lowdown on your connection, as well as the target machine. Information includes:
-    - Connection statistics
-    - Information about the computer, including operating system version, available RAM, etc.
-    - Running processes (Windows targets)
-    - Installed packages (Windows targets)
-- Disconnect Session (**Option+Shift+D**): Terminates the session.
-    - Remember that this option is available to both sides of the session.
-</MacOS>
-
-## File Transfers
-
-RIM provides a simple avenue for transferring files, irrespective of the platform used.
-1. Bring up the RIM menu, and click on "Minimize Session." Control will be directed back to your computer.
-1. Select the file(s) and/or folder(s) you want to transfer using your file manager.
-1. Copy the selected contents to the clipboard in the usual way. You will receive a notification that a file is ready to be transferred. You have two options.
-1. **If the target is a Mac:**
-    - Activate the RIM session menu and click on the "Transfer File to Target" option.
-    - Upon completion of the transfer, the target Mac will generate a temporary directory containing the transferred contents. These should then be copied and pasted to their intended directories.
-1. **If the target is a Windows machine:**
-    - Switch back to the remote session and locate the folder on the target machine where you wish to paste the content.
-    - Last but not least, paste as you normally would.
-
-Note that the transfer time will depend entirely on the size of the content being sent as well as your network speed.
-
-## Remote Accessibility Module
-
-Whether you're assisting a user who doesn't use a screen reader, or you're diagnosing an issue with a malfunctioning screen reader, RIM is fully prepared to come to your aid.
-<Windows>
-The remote accessibility module consists of two components:
-- An addon for the NVDA screen reader that enables the screen reader to receive output from the remote computer
-- A self-contained accessibility module initiated on the target computer at the request of the controller. The advantage to this approach is that the end user does not hear speech on their computer while you're controlling it. Instead, the Remote Accessibility Module pipes the speech output through to the running copy of NVDA on the controller side. This way, you can accessibly assist an end user without them having to install or even download a screen reader.
-### Setup Procedure
-For first-time initialization of the accessibility module, here is what you will need to do:
-1. Connect to a computer that does not have a screen reader running.
-1. If NVDA is currently running, you will be asked to install an addon that will allow your copy of NVDA to communicate with the remote computer during the session. Accept the installation prompts, and wait for NVDA to restart.
-1. By now, the remote accessibility module will be fully initialized, and you will hear speech output as you control the remote computer.
-
-From this point forward, if you are running a screen reader on the controling computer, the remote accessibility module will automatically start during remote sessions in which the remote computer does not have a screen reader running. Should you be running a screen reader other than NVDA, RIM will disengage that screen reader and then switch you over to NVDA. If you need to stop the remote accessibility module on the remote machine in order to start another screen reader, simply access the "Stop Remote Accessibility" option off the RIM menu.
-</Windows>
-<MacOS>
-The remote accessibility module is a special configuration initiated on the target Mac at the request of a Windows or Mac controller. The advantage to this approach is that the end user does not hear speech on their computer while you're controlling it. Instead, the Remote Accessibility Module pipes the speech output through to the speech system on the controller side. This way, you can accessibly assist an end user without them having to enable a screen reader. If you are running VoiceOver on the controling Mac, the remote accessibility module will automatically start during remote sessions in which the remote computer does not have a screen reader running.
-</MacOS>
-## Rebooting and Reconnecting
-
-Whether you're installing system updates or working your way out of a system hang, RIM has got you covered during the reboot process. Selecting the "Reboot and Reconnect" option off the RIM menu will allow you to either perform a graceful reboot or an emergency reboot, depending on what state the computer is in. While the computer is rebooting, RIM will inform you that reconnection attempts are being made.
-Note that if the computer is rebooted by a software installation or manually rebooted in the usual way, you will be asked if you wish to reconnect the session. Of further note is that in either case, Mac targets will only reconnect once the user logs in. This is due to the fact that RIM cannot start automatically on the login screen due to platform limitations, most notably FileVault disk encryption.
-## Unattended or Prompted Access
-
-RIM allows you, as the controller, to configure machines for unattended or prompted access. This allows you to provide remote assistance without the user having to launch RIM, enter a keyword, or even be near the computer. This is useful if you are a sysadmin performing routine maintenance on computers in your workgroup, or for clients you provide support to on the regular. You may also want to allow unattended access for your home computer should you need to access it from someplace else.
-There are a few ways to configure machines for unattended access.
-### During an Interactive Session
-
-1. Bring up the RIM menu.
-1. Select "Request Unattended or Prompted Access."
-1. You will be asked what kind of connection you want to configure. Your options are:
-    1. Unattended: Allows sessions to be initiated without any intervention whatsoever from the end user.
-    1. Prompted: This configuration presents the user with a prompt informing them that you are conecting to their machine. They will need to press Option+Shift+Y on macOS, or Windows+Shift+Y on Windows, should they wish to accept the connection.
-1. You will be asked to give this machine a name. Enter a personal name for the machine, or if applicable, the machine ID as it appears in your workgroup.
-1. Press enter.
-1. On the client machine, a dialogue pops up asking the user if they're fine with their computer being set up for the access you requested. If they answer yes, then you will get a prompt informing you that the access has been approved.  
-#### Note for Personal Unattended Account Holders
-
-If you have used all the machine slots allocated to your account, RIM will not perform the request. In this situation, you have two options, both possible via the RIM Dashboard:
-1. Deregister one of your machines, freeing up a slot.
-1. Upgrade your subscription with more slots.
-
-### Registering a Machine to your RIM account
-
-Should you wish to register one of your own machines for unattended access, you can do so without having to start an interactive session with the machine. 
-1. Start RIM in Receive Help Mode.
-1. Click on the "Add this machine to your RIM account" button.
-1. Enter your email, then click next.
-1. Wait for the two-step login code to arrive, enter it, then you should be logged in.
-1. You will be asked what type of access you would like configured for this machine. Your options are:
-    1. Unattended: Allows sessions to be initiated without any intervention whatsoever from the end user.
-    1. Prompted: This configuration presents the user with a prompt informing them that you are conecting to their machine.
-1. Give the machine a name, then activate the "Add Machine" button.
-1. The machine will be registered to your account, which will allow any controller machines logged into your RIM account to connect to this machine.
-#### Note for Personal Unattended Account Holders
-
-If you have used all the machine slots allocated to your account, RIM will not perform the request. In this situation, you have two options, both possible via the RIM Dashboard:
-1. Deregister one of your machines, freeing up a slot.
-1. Upgrade your subscription with more slots.
-### Getting Connected
-
-Now that we've registered the machine for unattended access, here is how we will start a session.
-1. Start RIM in controller mode.
-1. Rather than entering a keyword, locate and activate the"Choose a machine" button.
-1. When you click this, a list of machines will appear. Choose the one you want, then hit enter. You may also use the search bar to narrow the list down to a specific machine.
-
-If the target machine is configured for prompted access, the end user will get a prompt. Once they answer yes, you'll be connected. If the session is unattended, you will immediately be connected and dropped into the remote control zone.
-
-Please note: Voice conversations are not supported during fully unattended sessions, however they are supported for prompted sessions.
-### Creating a Shortcut for an Unattended Session
-
-For extra convenience, you can create desktop shortcuts that allow you to automatically launch unattended sessions. In order to do this:
-1. Access the list of unattended computers, and select the one you want to create a shortcut for.
-1. Click on the "Create Shortcut" button.
-1. A shortcut will be automatically added to your desktop.
-
-Now, when you activate this shortcut, you will either automatically land in the remote session, or send a prompt to the user's machine that they can accept.
-<Windows>
-#### More Ways to use Unattended Session Shortcuts
-Unattended session shortcuts, like any other shortcuts, can have global hotkeys associated with them. This can be extremely useful if you are a maintenance tech managing multiple computers in a workgroup. For example, if your workgroup consists of 6 computers that you perform routine maintenance on, you could configure Alt+Control+1 through 6 as hotkeys for each respective machine. This ought to significantly speed up your workflow.
-In addition, you can call up an unattended session via the run box if you copy the shortcut into your user directory. Once you've copied the shortcut, you may start an unattended session by typing your-session-name.url in the run box.
-</Windows>
-### Revoking Unattended Access
-
-If you no longer want your machine to be controlled unattended, you can revoke the controller's access. You do not need to be in a session in order to do this.
-<Windows>
-1. Access the Remote Incident Manager icon in your system tray.
-    1. If using the keyboard, press windows+b, then space, then left or right arrow until you find the icon.
-1. Right click this icon, or press the applications or shift+f10 key.
-1. Select the "Revoke Unattended Access" option.
-1. You will arrive at a list of computers, select the one you want to revoke.
-1. You will be asked if you wish to revoke the machine; answer yes.  
-</Windows>
-<MacOS>
-1. Access the Remote Incident Manager icon in your menu extras/status menus.
-    1. If using VoiceOver, press VO+M twice, then locate the Remote Incident Manager menu icon.
-    1. Click this icon, or press VO+Space.  
-1. Select the "Revoke Unattended Access" option.
-1. You will arrive at a list of computers, select the one you want to revoke.
-1. You will be asked if you wish to revoke the machine; answer yes.  
-</MacOS>
-That's it! The controller will receive a message stating that this machine is no longer available for unattended access. Should they need unattended access again, they can reinitiate the procedure to request permission for unattended access as described above.
-<Windows>
-## Key Command Reference
-
-| Action                                   | Command             |
-| ---------------------------------------- | ------------------- |
-| Access the RIM Menu                      | Windows+Shift+Backspace |
-| Minimize Session                         | Windows+Shift+M     |
-| Flip Session                             | Windows+Shift+F     |
-| Disconnect Session (Controller or Target) | Windows+Shift+D     |
-</Windows>
-<MacOS>
-    Action | Command
-    --- | ---
-    Access the RIM Menu | Option+Shift+Backspace
-    Minimize Session | Option+Shift+M
-    Flip Session | Option+Shift+F
-    Disconnect Session (Controller or Target) | Option+Shift+D
-</MacOS>
+Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
+1. Login to your Scribe for Meetings account, if you have not done so already.
+1. Enter the invite link for the meeting, then click "Go."
+1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
+1. Give the meeting a title.
+1. You will be asked if you wish to have images automatically described.
+1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
