--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -1,28 +1,17 @@
----
-title: Getting Connected
----
+import { MacOS, Windows } from '@/../components/platform'
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
+# Getting Connected
 
-Remote Incident Manager's connection process is designed with speed and simplicity in mind, both for the person receiving assistance as well as for the person providing it.
-## Connecting to a Controller
-When you first launch Remote Incident Manager, you will be in target mode by default. This means that you are going to be connecting to a person who has set up a remote support session for you.  
-You will land in an edit box labeled "keyword." Enter the keyword issued to you by the person assisting you, and then simply hit enter. That's it, you're connected!
-## Accepting a Request to Connect
-If a technician provides support to you on the regular, your machine may be set up to receive a request to connect without either of you having to enter a keyword. RIM will play a chime, then announce that your technician is attempting to connect.  
-<Windows>In order to accept the connection, press **Windows+Shift+Y** and the session will begin momentarily.</Windows>
-<MacOS>In order to accept the connection, press **Option+Shift+Y** and the session will begin momentarily.</MacOS>
-## Connecting to a Target
-The process for setting up the session is fairly similar. Rather than entering the keyword, you will want to navigate to the "Provide help instead" button. When doing this for the first time, you will be asked to set up an account.
-1. Enter your email address.
-1. Check your email for a verification code, and then enter it into RIM.
-1. You will then be asked to enter your name, location and phone number.
-1. Lastly, you will receive another verification code on your phone. Enter this code into RIM.
-    1. If you do not have a mobile phone capable of receiving text messages, please fill out this form. We will assist you in getting your account verified.
-    1. A note for international numbers: If your verification code doesn't come through, make sure the country code before your number is denoted by the plus sign, rather than 00.
+Scribe for Meetings offers several quick, painless ways to connect to your accessible slide presentation.
 
-Now that you're logged in, enter the keyword that the target will use to connect to you. When you navigate past the edit box, you will come across a checkbox that determines whether or not to start a voice conversation during the session (this can be toggled on or off during the session as well). After that, you will find the "Start" button. When you click this, you will be in the waiting room until your target connects. At this point, you will want to send the keyword you just entered to the person you'll be connecting to, as this is what they will use to connect. Once they have connected, you will receive an alert informing you that the remote session is about to begin.  
-<Windows>Take note of the mentioned **Windows+Shift+Backspace** shortcut as that will bring up the RIM menu on your machine. If you rely on the keyboard exclusively, this is the only way to direct keyboard input back to your own system.</Windows>
-<MacOS>Take note of the mentioned **Option+Shift+Backspace** shortcut as that will bring up the RIM menu on your machine. If you rely on the keyboard exclusively, this is the only way to direct keyboard input back to your own system.</MacOS>
-After you dismiss this dialogue, the remote session will be initiated.
+## Direct Link
+
+Similar to a meeting link from your teleconference platform, Scribe for Meetings offers direct links for joining your accessible slide presentation. If you receive one in your meeting invite or the meeting chat, you can click on it to instantly open Scribe for Meetings in your web browser. Once you click the "Start" button, one of two things may happen.
+1. You will hear a short chime, followed by a message informing you that Scribe for Meetings is preparing to provide access to the content in this meeting.
+    1. It is normal for this to take up to three minutes, hence why it may be advisable for the meeting presenter to initialize Scribe for Meetings in advance of presenting their slides.
+    1. Once the Scribe Bot joins the meeting, you will receive a second alert chime followed by a message alerting you of this fact.
+1. You may sometimes start hearing slide content being announced very shortly after clicking on "Start." This could happen if:
+    1. You are not the first visually impaired participant to enter the meeting.
+    1. You entered a meeting late.
+
+In any case, Scribe for Meetings is now ready to start presenting the slides.
