title schema fixes

--- a/src/content/docs/en/faq.mdx
+++ b/src/content/docs/en/faq.mdx
@@ -1,6 +1,6 @@
-import { MacOS, Windows } from '@/../components/platform'
-
-# Frequently Asked Questions
+---
+title: " Frequently Asked questions
+---
 
 Here are answers to some common questions concerning RIM. When faced with an issue, please refer to this document whenever possible.  
 Don’t see your question? [Contact us.](https://pneumasolutions.com/contact/), and let’s get you squared away.
