--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -1,6 +1,6 @@
-import { MacOS, Windows } from '@/../components/platform'
-
-# Getting Connected
+---
+title: Getting Conected
+---
 
 Scribe for Meetings offers several quick, painless ways to connect to your accessible slide presentation.
 
