fixed double quotes

--- a/src/content/docs/en/faq.mdx
+++ b/src/content/docs/en/faq.mdx
@@ -1,5 +1,5 @@
 ---
-title: " Frequently Asked questions
+title: Frequently Asked questions
 ---
 
 Here are answers to some common questions concerning RIM. When faced with an issue, please refer to this document whenever possible.  
