--- a/src/content/docs/en/makingmeetings.mdx
+++ b/src/content/docs/en/makingmeetings.mdx
@@ -1,5 +1,5 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Setting Up Accessible Meetings
 ---
 
 Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
